--- a/register.html
+++ b/register.html
@@ -1,10 +1,108 @@
+<?php
+session_start();
+
+// if (isset($_SESSION['email'])) {
+//     header("Location: dashboard.php");
+//     exit();
+// }
+
+if (isset(false['email'])) {
+    header("Location: dashboard.php");
+    exit();
+}
+
+$firstName = "";
+$lastName = "";
+$email = "";
+$password = "";
+$confirmPassword = "";
+
+$nameError = "";
+$emailError = "";
+$passwordError = "";
+$confirmPasswordError = "";
+
+$error = false;
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+    $firstName = $_POST['firstName'];
+    $lastName = $_POST['lastName'];
+    $email = $_POST['email'];
+    $password = $_POST['password'];
+    $confirmPassword = $_POST['confirmPassword'];
+
+    if(empty($firstName and $lastName)){
+    $error = true;
+    $nameError = "First and last name is required.";
+    }
+
+    if(empty($email)){
+        $error = true;
+        $emailError = "Email is required.";
+    } elseif (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
+        $error = true;
+        $emailError = "Invalid email format.";
+    }
+
+    include 'db.php';
+    $connectDB = connectDB();
+    $statement = $connectDB->prepare("SELECT id FROM users WHERE email = ?");
+    $statement->bind_param("s", $email);
+    $statement->execute();
+
+    $statement->store_result();
+    if ($statement->num_rows > 0) {
+        $error = true;
+        $emailError = "Email is already registered.";
+    }
+    $statement->close();
+
+    if(empty($password)){
+        $error = true;
+        $passwordError = "Password is required.";
+    } elseif (strlen($password) < 6) {
+        $error = true;
+        $passwordError = "Password must be at least 6 characters long.";
+    }
+    if( $confirmPassword!== $password){
+        $error = true;
+        $confirmPasswordError = "Passwords do not match.";
+    }
+
+    if (!$error) {
+        $hashedPassword = password_hash($password, PASSWORD_BCRYPT);
+      
+        $statement = $connectDB->prepare("INSERT INTO users (firstName, lastName, email, password) VALUES ( ?, ?, ?, ?)");
+        $statement->bind_param("ssss", $firstName, $lastName, $email, $hashedPassword);
+
+        if ($statement->execute()) {
+            header("Location: index.php");
+            exit();
+        } else {
+            echo "Error: " . $statement->error;
+        }
+        $insertID = $statement->insert_id;
+        $statement->close();
+
+        $_SESSION['id'] = $insertID;
+        $_SESSION['firstName'] = $firstName;
+        $_SESSION['lastName'] = $lastName;
+        $_SESSION['email'] = $email;
+        header("Location: index.php");
+        exit();
+    }
+}
+?>
+
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Banking</title>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <div class="page">
@@ -26,28 +124,34 @@
             <h2>Create Your Account</h2>
             <p>Start your journey with secure and fast transactions</p>
           </div>
-          <div class="inputs">
-            <div class="name">
-              <input type="text" placeholder="First Name" required />
-              <input type="text" placeholder="Last Name" required />
+          <form method="POST" action="register.php">
+            <div class="inputs">
+              <div class="name">
+                <input placeholder="First Name" name="firstName" value ="<?= $firstName?>" required />  
+                <input type="text" placeholder="Last Name" name="lastName" value ="<?= $lastName?>"required />
+              </div>
+              <span><?= $nameError?></span>
+              <div class="email">
+                <input placeholder="Email" name="email" value ="<?= $email?>" required />
+                <span class = "text-danger"><?= $emailError?></span>  
+              </div>
+              <div class="password">  
+                <input type="password" placeholder="Password" name = "password" required />
+                <span><?= $passwordError?></span>
+                <input type="password" placeholder="Confirm Password" name="confirmPassword" required />
+                <span><?= $confirmPasswordError?></span>
+              </div>
+              <div class="ForgotPass">
+                <a href="forgotpassword.html">Forgot Password?</a>
+              </div>
+              <div class="Button">
+                <button type = "submit">Register</button>
+              </div>
             </div>
-            <div class="email">
-              <input type="email" placeholder="Email" required />
-            </div>
-            <div class="password">
-              <input type="password" placeholder="Password" required />
-              <input type="password" placeholder="Confirm Password" required />
-            </div>
-            <div class="ForgotPass">
-              <a href="forgotpassword.html">Forgot Password?</a>
-            </div>
-            <div class="Button">
-              <button>Register</button>
-            </div>
-          </div>
+          </form>
         </div>
         <div class="paragraph">
-          <p>Already have an account? <a href="index.html">Login here</a></p>
+          <p>Already have an account? <a href="index.php">Login here</a></p>
         </div>
       </div>
     </div>
